src/components/Admin/Admindashboard.css
.admin-dashboard-title {
    color: #1A1A1A;
    font-family: Arial;
    font-size: 30px;
    font-style: normal;
    font-weight: 600;
    line-height: 62px;
    letter-spacing: -0.939px;
    text-align: center
}
.admin-dashboard-buttons-row{
    display: grid;
    grid-template-columns: 1fr 1fr 1fr;
}
.admin-dashboard-button{
    width: 300px;
    height: 200px;
    border-radius: 15px;
    border: 2px solid #D2D2D2;
    background: none;
    color: #1A1A1A;
    margin: auto;
    margin-bottom: 20px;
    font-family: Arial;
    font-size: 25px;
    font-style: normal;
    font-weight: 500;
    line-height: normal;
    letter-spacing: -0.361px;
}

.admin-dashboard-button-icon{
    padding-left: 70px;
    padding-right: 70px;
}

.admin-logout-icon{
    padding-left: 10%;
    width: 40px;
    height: 40px;
   
}

.admin-logout-container{
    display: flex;
    justify-content: flex-end;
    padding-top: 20px;
    padding-right: 20px;
    padding-bottom: 20px;
}
.admin-logout-button-value{
    display: grid;
    grid-template-columns: 3fr 1fr;
    height: 50px;
    width: 200px;
    border-radius: 15px;
    border: 2px solid #D2D2D2;
    font-family: Arial;
    font-size: 24px;
    background-color: #fff;
    color: #000;
    padding-top: 10px;
}

/* Mobile styles - 480px width and below */
@media only screen and (max-width: 1200px) {
    .admin-dashboard-buttons-row {
        grid-template-columns: 1fr 1fr;
    }
}

